-  fixed bugs - Add Scoreboards - Add Scoreboard manager in ScoreBoardHelper.java - Add permission "undying"