@@ -11,6 +11,7 @@ import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.format.TextColor;
 import org.bukkit.Bukkit;
 import org.bukkit.Color;
+import org.bukkit.Location;
 import org.bukkit.entity.Player;
 import org.bukkit.metadata.FixedMetadataValue;
 import org.bukkit.plugin.java.JavaPlugin;
@@ -49,6 +50,7 @@ public class ControlCmd {
                             ));
                             playerobj.setMetadata("been_controlled", new FixedMetadataValue(plugin, player.getUniqueId()));//使用元数据标记被控制玩家，存储控制者
                             player.setMetadata("controlling_player", new FixedMetadataValue(plugin, playerobj.getUniqueId()));//使用元数据标记控制玩家，存储被控制者
+                            player.setMetadata("location_before_control", new FixedMetadataValue(plugin, player.getLocation()));//存储控制者控制前的坐标
                             player.teleport(playerobj.getLocation());
                         }else {
                             player.sendMessage(Component.text("未知的玩家").color(TextColor.color(java.awt.Color.RED.getRGB())));
@@ -59,13 +61,12 @@ public class ControlCmd {
             .then(Commands.literal("stop").executes(commandContext -> {
                 Player player = (Player)commandContext.getSource().getSender();
                 if(player.hasMetadata("controlling_player")){
-                    Player target = Bukkit.getPlayer((UUID) player.getMetadata("controlling_player").get(0).value());
+                    Player target = Bukkit.getPlayer((UUID) player.getMetadata("controlling_player").getFirst().value());
+                    player.teleport((Location)player.getMetadata("location_before_control").getFirst().value());
                     player.removeMetadata("controlling_player",plugin);
-                    if(target.isOnline()) {
-                        target.removeMetadata("been_controlled", plugin);
-                    }else{
-                        player.sendMessage(Component.text("警告:控制对象离线").color(TextColor.color(Color.YELLOW.asRGB())));
-                    }
+                    player.removeMetadata("location_before_control",plugin);
+                    target.removeMetadata("been_controlled", plugin);
+
                     player.removePotionEffect(PotionEffectType.INVISIBILITY);
                 }else{
                     player.sendMessage(Component.text("没有正在进行的控制").color(TextColor.color(Color.RED.asRGB())));
